fix overflow issue for new users sign up form

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,7 +10,7 @@
   #user-signup-header {
     margin: 5%;
   }
-  
+
   div.float-container > input, div.float-container > label{
       font-size: 1em;
   }
@@ -32,14 +32,15 @@
 
 #user-signup-header {
   align-self: center;
-  margin: 2%;
+  margin: 3%;
 }
 
 form#new_user {
   flex-basis: 80%;
   display: grid;
-  grid-template-rows: repeat(auto-fill, minmax(5%, 1fr));
+  grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(1, 1fr);
+  background-color: aliceblue;
 }
 
 #new_user_submit {
